--- a/services/customer-service/src/main/resources/public/cs-order.html
+++ b/services/customer-service/src/main/resources/public/cs-order.html
@@ -1,141 +1,3 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8" />
-    <title>Customer Service - Create Order</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-    <!-- Tiny bit of styling -->
-    <style>
-        body {
-            font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-            margin: 0;
-            padding: 1.5rem;
-            background: #f4f4f5;
-        }
-        .page {
-            max-width: 900px;
-            margin: 0 auto;
-            background: #ffffff;
-            border-radius: 16px;
-            padding: 1.5rem 2rem;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.08);
-        }
-        h1 {
-            margin-top: 0;
-            margin-bottom: 0.25rem;
-        }
-        .subtitle {
-            margin-top: 0;
-            color: #6b7280;
-            font-size: 0.9rem;
-        }
-        label {
-            display: block;
-            font-size: 0.9rem;
-            font-weight: 600;
-            margin-bottom: 0.25rem;
-        }
-        input, select {
-            width: 100%;
-            box-sizing: border-box;
-            padding: 0.45rem 0.6rem;
-            border-radius: 8px;
-            border: 1px solid #d4d4d8;
-            font-size: 0.95rem;
-        }
-        input:focus, select:focus {
-            outline: none;
-            border-color: #2563eb;
-            box-shadow: 0 0 0 1px #2563eb30;
-        }
-        .grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            gap: 1rem;
-        }
-        .section {
-            margin-top: 1.25rem;
-            margin-bottom: 0.25rem;
-        }
-        .orderline-row {
-            display: grid;
-            grid-template-columns: 1fr 1fr 1fr auto;
-            gap: 0.5rem;
-            align-items: end;
-            margin-bottom: 0.5rem;
-        }
-        .btn {
-            border: none;
-            border-radius: 999px;
-            padding: 0.5rem 1.1rem;
-            font-size: 0.9rem;
-            cursor: pointer;
-        }
-        .btn-primary {
-            background: #2563eb;
-            color: white;
-        }
-        .btn-secondary {
-            background: #e5e7eb;
-            color: #111827;
-        }
-        .btn-danger {
-            background: #ef4444;
-            color: white;
-        }
-        .btn:disabled {
-            opacity: 0.7;
-            cursor: default;
-        }
-        .actions {
-            display: flex;
-            gap: 0.75rem;
-            margin-top: 1rem;
-            align-items: center;
-        }
-        .badge {
-            display: inline-block;
-            padding: 0.15rem 0.55rem;
-            border-radius: 999px;
-            font-size: 0.75rem;
-            background: #e0f2fe;
-            color: #0369a1;
-            font-weight: 500;
-            margin-left: 0.25rem;
-        }
-        .status-message {
-            margin-top: 0.75rem;
-            font-size: 0.9rem;
-            padding: 0.75rem 0.9rem;
-            border-radius: 0.75rem;
-        }
-        .status-success {
-            background: #ecfdf3;
-            color: #166534;
-            border: 1px solid #bbf7d0;
-        }
-        .status-error {
-            background: #fef2f2;
-            color: #991b1b;
-            border: 1px solid #fecaca;
-        }
-        .order-total {
-            margin-top: 0.5rem;
-            font-size: 0.9rem;
-            color: #374151;
-        }
-    </style>
-
-    <!-- React + ReactDOM from CDN -->
-    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-    <!-- Babel so we can write JSX directly in the HTML file -->
-    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
-</head>
-<body>
-<div id="root"></div>
-
 <script type="text/babel">
     const { useState, useMemo } = React;
 
@@ -145,6 +7,7 @@
         const [orderLines, setOrderLines] = useState([
             { item_id: "", price_snapshot: "", amount: "" },
         ]);
+        const [paymentMethod, setPaymentMethod] = useState("PAYPAL"); // NEW
         const [isSubmitting, setIsSubmitting] = useState(false);
         const [message, setMessage] = useState(null); // { type: "success" | "error", text: string }
 
@@ -176,6 +39,7 @@
             setCustomerId("");
             setStatus("created");
             setOrderLines([{ item_id: "", price_snapshot: "", amount: "" }]);
+            setPaymentMethod("PAYPAL"); // reset too
         };
 
         const handleSubmit = async (e) => {
@@ -204,6 +68,7 @@
                 customerId: Number(customerId),
                 status,
                 orderLines: cleanedLines,
+                paymentMethod, // NEW: "PAYPAL" or "MOBILEPAY"
             };
 
             setIsSubmitting(true);
@@ -224,8 +89,8 @@
                         type: "success",
                         text:
                             text && text.trim().length > 0
-                                ? `Order created. Server said: ${text}`
-                                : "Order created successfully (empty response body).",
+                                ? `Order created and payment processed. Server said: ${text}`
+                                : "Order created and payment processed (empty response body).",
                     });
                     resetForm();
                 } else {
@@ -234,7 +99,7 @@
                         text:
                             text && text.trim().length > 0
                                 ? `Error ${res.status}: ${text}`
-                                : `Error ${res.status} while creating order.`,
+                                : `Error ${res.status} while creating order or processing payment.`,
                     });
                 }
             } catch (err) {
@@ -285,6 +150,24 @@
                                     <option value="preparing">preparing</option>
                                     <option value="sent">sent</option>
                                     <option value="delivered">delivered</option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+
+                    {/* Payment method - NEW */}
+                    <div className="section">
+                        <h3>Payment</h3>
+                        <div className="grid">
+                            <div>
+                                <label htmlFor="paymentMethod">Payment method</label>
+                                <select
+                                    id="paymentMethod"
+                                    value={paymentMethod}
+                                    onChange={(e) => setPaymentMethod(e.target.value)}
+                                >
+                                    <option value="PAYPAL">PayPal</option>
+                                    <option value="MOBILEPAY">MobilePay</option>
                                 </select>
                             </div>
                         </div>
@@ -381,5 +264,3 @@
     const root = ReactDOM.createRoot(document.getElementById("root"));
     root.render(<OrderForm />);
 </script>
-</body>
-</html>
