--- a/services/supplier-service/reports/jacoco/mtogo.supplier.server/Main.java.html
+++ b/services/supplier-service/reports/jacoco/mtogo.supplier.server/Main.java.html
@@ -11,8 +11,8 @@ import org.slf4j.LoggerFactory;
     public static void main(String[] args) {
         try {
             // Arbitrary commentddd
-
-<span class="nc" id="L15">            LegacyDBAdapter la = LegacyDBAdapter.getAdapter().startListener(1984);</span>
+<span class="nc" id="L14">            LegacyDBAdapter.getAdapter().startListener(1984);</span>
+            
 <span class="nc" id="L16">        } catch (IOException ex) {</span>
 <span class="nc" id="L17">            log.error(ex.getMessage());</span>
 <span class="nc" id="L18">        }</span>
