--- a/services/customer-service/src/main/resources/public/cs-order.html
+++ b/services/customer-service/src/main/resources/public/cs-order.html
@@ -1,3 +1,144 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8" />
+    <title>MTOGO – Customer Service Order Tool</title>
+
+    <!-- React & ReactDOM (UMD builds) -->
+    <script
+            src="https://unpkg.com/react@18/umd/react.development.js"
+            crossorigin
+    ></script>
+    <script
+            src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
+            crossorigin
+    ></script>
+
+    <!-- Babel standalone, needed for type="text/babel" + JSX -->
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+
+    <style>
+        body {
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+            sans-serif;
+            margin: 0;
+            padding: 2rem;
+            background: #f7f7f8;
+        }
+        .page {
+            max-width: 900px;
+            margin: 0 auto;
+            background: #fff;
+            border-radius: 12px;
+            padding: 2rem;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.05);
+        }
+        h1 {
+            margin-top: 0;
+        }
+        .subtitle {
+            color: #555;
+            margin-bottom: 1.5rem;
+        }
+        .badge {
+            display: inline-block;
+            margin-left: 0.5rem;
+            padding: 0.15rem 0.5rem;
+            font-size: 0.75rem;
+            border-radius: 999px;
+            background: #eee;
+            text-transform: uppercase;
+            letter-spacing: 0.05em;
+        }
+        .section {
+            margin-bottom: 1.5rem;
+        }
+        .grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            gap: 1rem;
+        }
+        label {
+            display: block;
+            font-size: 0.85rem;
+            margin-bottom: 0.25rem;
+            color: #333;
+        }
+        input,
+        select {
+            width: 100%;
+            box-sizing: border-box;
+            padding: 0.5rem 0.6rem;
+            border-radius: 6px;
+            border: 1px solid #ccc;
+            font-size: 0.95rem;
+        }
+        .orderline-row {
+            display: grid;
+            grid-template-columns: 1.5fr 1.5fr 1fr auto;
+            gap: 0.75rem;
+            align-items: end;
+            margin-bottom: 0.75rem;
+        }
+        .btn {
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            padding: 0.45rem 0.9rem;
+            border-radius: 6px;
+            border: none;
+            font-size: 0.9rem;
+            cursor: pointer;
+        }
+        .btn-primary {
+            background: #2563eb;
+            color: white;
+        }
+        .btn-secondary {
+            background: #e5e7eb;
+            color: #111827;
+        }
+        .btn-danger {
+            background: #dc2626;
+            color: white;
+        }
+        .btn:disabled {
+            opacity: 0.6;
+            cursor: default;
+        }
+        .order-total {
+            margin-top: 0.75rem;
+            font-size: 1rem;
+        }
+        .actions {
+            display: flex;
+            gap: 0.75rem;
+            margin-top: 1rem;
+        }
+        .status-message {
+            margin-top: 1rem;
+            padding: 0.75rem 1rem;
+            border-radius: 8px;
+            font-size: 0.9rem;
+        }
+        .status-success {
+            background: #ecfdf3;
+            color: #166534;
+            border: 1px solid #bbf7d0;
+        }
+        .status-error {
+            background: #fef2f2;
+            color: #b91c1c;
+            border: 1px solid #fecaca;
+        }
+    </style>
+</head>
+
+<body>
+<!-- IMPORTANT: this must exist before the React code runs -->
+<div id="root"></div>
+
+<!-- Your React/Babel app -->
 <script type="text/babel">
     const { useState, useMemo } = React;
 
@@ -7,9 +148,9 @@
         const [orderLines, setOrderLines] = useState([
             { item_id: "", price_snapshot: "", amount: "" },
         ]);
-        const [paymentMethod, setPaymentMethod] = useState("PAYPAL"); // NEW
+        const [paymentMethod, setPaymentMethod] = useState("PAYPAL");
         const [isSubmitting, setIsSubmitting] = useState(false);
-        const [message, setMessage] = useState(null); // { type: "success" | "error", text: string }
+        const [message, setMessage] = useState(null);
 
         const total = useMemo(() => {
             return orderLines.reduce((sum, line) => {
@@ -28,7 +169,10 @@
         };
 
         const addLine = () => {
-            setOrderLines((prev) => [...prev, { item_id: "", price_snapshot: "", amount: "" }]);
+            setOrderLines((prev) => [
+                ...prev,
+                { item_id: "", price_snapshot: "", amount: "" },
+            ]);
         };
 
         const removeLine = (index) => {
@@ -39,7 +183,7 @@
             setCustomerId("");
             setStatus("created");
             setOrderLines([{ item_id: "", price_snapshot: "", amount: "" }]);
-            setPaymentMethod("PAYPAL"); // reset too
+            setPaymentMethod("PAYPAL");
         };
 
         const handleSubmit = async (e) => {
@@ -60,7 +204,10 @@
                 }));
 
             if (cleanedLines.length === 0) {
-                setMessage({ type: "error", text: "You must add at least one valid order line." });
+                setMessage({
+                    type: "error",
+                    text: "You must add at least one valid order line.",
+                });
                 return;
             }
 
@@ -68,7 +215,7 @@
                 customerId: Number(customerId),
                 status,
                 orderLines: cleanedLines,
-                paymentMethod, // NEW: "PAYPAL" or "MOBILEPAY"
+                paymentMethod,
             };
 
             setIsSubmitting(true);
@@ -105,7 +252,8 @@
             } catch (err) {
                 setMessage({
                     type: "error",
-                    text: "Network or server error while creating order: " + err.message,
+                    text:
+                        "Network or server error while creating order: " + err.message,
                 });
             } finally {
                 setIsSubmitting(false);
@@ -121,7 +269,7 @@
                 </p>
 
                 <form onSubmit={handleSubmit}>
-                    {/* Customer + status */}
+                    {/* Order info */}
                     <div className="section">
                         <h3>Order Info</h3>
                         <div className="grid">
@@ -155,7 +303,7 @@
                         </div>
                     </div>
 
-                    {/* Payment method - NEW */}
+                    {/* Payment */}
                     <div className="section">
                         <h3>Payment</h3>
                         <div className="grid">
@@ -184,7 +332,9 @@
                                         type="number"
                                         min="1"
                                         value={line.item_id}
-                                        onChange={(e) => updateLine(index, "item_id", e.target.value)}
+                                        onChange={(e) =>
+                                            updateLine(index, "item_id", e.target.value)
+                                        }
                                         placeholder="item_id"
                                     />
                                 </div>
@@ -194,7 +344,13 @@
                                         type="number"
                                         step="0.01"
                                         value={line.price_snapshot}
-                                        onChange={(e) => updateLine(index, "price_snapshot", e.target.value)}
+                                        onChange={(e) =>
+                                            updateLine(
+                                                index,
+                                                "price_snapshot",
+                                                e.target.value
+                                            )
+                                        }
                                         placeholder="e.g. 49.95"
                                     />
                                 </div>
@@ -204,7 +360,9 @@
                                         type="number"
                                         min="1"
                                         value={line.amount}
-                                        onChange={(e) => updateLine(index, "amount", e.target.value)}
+                                        onChange={(e) =>
+                                            updateLine(index, "amount", e.target.value)
+                                        }
                                         placeholder="e.g. 2"
                                     />
                                 </div>
@@ -221,7 +379,11 @@
                             </div>
                         ))}
 
-                        <button type="button" className="btn btn-secondary" onClick={addLine}>
+                        <button
+                            type="button"
+                            className="btn btn-secondary"
+                            onClick={addLine}
+                        >
                             + Add order line
                         </button>
 
@@ -232,7 +394,11 @@
 
                     {/* Actions */}
                     <div className="actions">
-                        <button type="submit" className="btn btn-primary" disabled={isSubmitting}>
+                        <button
+                            type="submit"
+                            className="btn btn-primary"
+                            disabled={isSubmitting}
+                        >
                             {isSubmitting ? "Creating…" : "Create order"}
                         </button>
                         <button
@@ -250,7 +416,9 @@
                         <div
                             className={
                                 "status-message " +
-                                (message.type === "success" ? "status-success" : "status-error")
+                                (message.type === "success"
+                                    ? "status-success"
+                                    : "status-error")
                             }
                         >
                             {message.text}
@@ -261,6 +429,9 @@
         );
     }
 
-    const root = ReactDOM.createRoot(document.getElementById("root"));
+    const rootEl = document.getElementById("root");
+    const root = ReactDOM.createRoot(rootEl);
     root.render(<OrderForm />);
 </script>
+</body>
+</html>
