--- a/services/customer-service/src/main/resources/public/cs-order.html
+++ b/services/customer-service/src/main/resources/public/cs-order.html
@@ -1,144 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8" />
-    <title>MTOGO – Customer Service Order Tool</title>
-
-    <!-- React & ReactDOM (UMD builds) -->
-    <script
-            src="https://unpkg.com/react@18/umd/react.development.js"
-            crossorigin
-    ></script>
-    <script
-            src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
-            crossorigin
-    ></script>
-
-    <!-- Babel standalone, needed for type="text/babel" + JSX -->
-    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-
-    <style>
-        body {
-            font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-            sans-serif;
-            margin: 0;
-            padding: 2rem;
-            background: #f7f7f8;
-        }
-        .page {
-            max-width: 900px;
-            margin: 0 auto;
-            background: #fff;
-            border-radius: 12px;
-            padding: 2rem;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.05);
-        }
-        h1 {
-            margin-top: 0;
-        }
-        .subtitle {
-            color: #555;
-            margin-bottom: 1.5rem;
-        }
-        .badge {
-            display: inline-block;
-            margin-left: 0.5rem;
-            padding: 0.15rem 0.5rem;
-            font-size: 0.75rem;
-            border-radius: 999px;
-            background: #eee;
-            text-transform: uppercase;
-            letter-spacing: 0.05em;
-        }
-        .section {
-            margin-bottom: 1.5rem;
-        }
-        .grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            gap: 1rem;
-        }
-        label {
-            display: block;
-            font-size: 0.85rem;
-            margin-bottom: 0.25rem;
-            color: #333;
-        }
-        input,
-        select {
-            width: 100%;
-            box-sizing: border-box;
-            padding: 0.5rem 0.6rem;
-            border-radius: 6px;
-            border: 1px solid #ccc;
-            font-size: 0.95rem;
-        }
-        .orderline-row {
-            display: grid;
-            grid-template-columns: 1.5fr 1.5fr 1fr auto;
-            gap: 0.75rem;
-            align-items: end;
-            margin-bottom: 0.75rem;
-        }
-        .btn {
-            display: inline-flex;
-            align-items: center;
-            justify-content: center;
-            padding: 0.45rem 0.9rem;
-            border-radius: 6px;
-            border: none;
-            font-size: 0.9rem;
-            cursor: pointer;
-        }
-        .btn-primary {
-            background: #2563eb;
-            color: white;
-        }
-        .btn-secondary {
-            background: #e5e7eb;
-            color: #111827;
-        }
-        .btn-danger {
-            background: #dc2626;
-            color: white;
-        }
-        .btn:disabled {
-            opacity: 0.6;
-            cursor: default;
-        }
-        .order-total {
-            margin-top: 0.75rem;
-            font-size: 1rem;
-        }
-        .actions {
-            display: flex;
-            gap: 0.75rem;
-            margin-top: 1rem;
-        }
-        .status-message {
-            margin-top: 1rem;
-            padding: 0.75rem 1rem;
-            border-radius: 8px;
-            font-size: 0.9rem;
-        }
-        .status-success {
-            background: #ecfdf3;
-            color: #166534;
-            border: 1px solid #bbf7d0;
-        }
-        .status-error {
-            background: #fef2f2;
-            color: #b91c1c;
-            border: 1px solid #fecaca;
-        }
-    </style>
-</head>
-
-<body>
-<!-- IMPORTANT: this must exist before the React code runs -->
-<div id="root"></div>
-
-<!-- Your React/Babel app -->
 <script type="text/babel">
     const { useState, useMemo } = React;
 
@@ -151,6 +10,23 @@
         const [paymentMethod, setPaymentMethod] = useState("PAYPAL");
         const [isSubmitting, setIsSubmitting] = useState(false);
         const [message, setMessage] = useState(null);
+
+        // NEW: supplier / menu state
+        const [zipcode, setZipcode] = useState("");
+        const [suppliers, setSuppliers] = useState([]);
+        const [selectedSupplierId, setSelectedSupplierId] = useState("");
+        const [menuItems, setMenuItems] = useState([]);
+        const [isLoadingSuppliers, setIsLoadingSuppliers] = useState(false);
+        const [isLoadingItems, setIsLoadingItems] = useState(false);
+
+        // Helpers to be robust against DTO property names
+        const getItemId = (item) => item.itemId ?? item.id ?? item.item_id;
+        const getItemName = (item) => item.name ?? item.itemName ?? item.title ?? `Item ${getItemId(item)}`;
+        const getItemPrice = (item) =>
+            item.price ??
+            item.priceSnapshot ??
+            item.price_snapshot ??
+            0;
 
         const total = useMemo(() => {
             return orderLines.reduce((sum, line) => {
@@ -184,6 +60,127 @@
             setStatus("created");
             setOrderLines([{ item_id: "", price_snapshot: "", amount: "" }]);
             setPaymentMethod("PAYPAL");
+            // Keep supplier selection, it's a separate concern
+        };
+
+        // NEW: fetch active suppliers by zipcode
+        const fetchSuppliers = async () => {
+            setMessage(null);
+            setSuppliers([]);
+            setMenuItems([]);
+            setSelectedSupplierId("");
+
+            const trimmedZip = zipcode.trim();
+            if (!trimmedZip) {
+                setMessage({
+                    type: "error",
+                    text: "Please enter a zipcode before searching for suppliers.",
+                });
+                return;
+            }
+
+            setIsLoadingSuppliers(true);
+            try {
+                const res = await fetch(`/api/suppliers/${encodeURIComponent(trimmedZip)}`);
+                const text = await res.text();
+
+                if (!res.ok) {
+                    setMessage({
+                        type: "error",
+                        text:
+                            text && text.trim().length > 0
+                                ? `Error ${res.status} while fetching suppliers: ${text}`
+                                : `Error ${res.status} while fetching suppliers.`,
+                    });
+                    return;
+                }
+
+                const data = text ? JSON.parse(text) : [];
+                setSuppliers(Array.isArray(data) ? data : []);
+                if (Array.isArray(data) && data.length === 0) {
+                    setMessage({
+                        type: "error",
+                        text: "No active suppliers found for that zipcode.",
+                    });
+                }
+            } catch (err) {
+                setMessage({
+                    type: "error",
+                    text: "Network or server error while fetching suppliers: " + err.message,
+                });
+            } finally {
+                setIsLoadingSuppliers(false);
+            }
+        };
+
+        // NEW: fetch menu items for selected supplier
+        const fetchMenuItems = async () => {
+            setMessage(null);
+            setMenuItems([]);
+
+            if (!selectedSupplierId) {
+                setMessage({
+                    type: "error",
+                    text: "Please select a supplier before loading menu items.",
+                });
+                return;
+            }
+
+            setIsLoadingItems(true);
+            try {
+                const res = await fetch(`/api/${encodeURIComponent(selectedSupplierId)}/items`);
+                const text = await res.text();
+
+                if (!res.ok) {
+                    setMessage({
+                        type: "error",
+                        text:
+                            text && text.trim().length > 0
+                                ? `Error ${res.status} while fetching menu items: ${text}`
+                                : `Error ${res.status} while fetching menu items.`,
+                    });
+                    return;
+                }
+
+                const data = text ? JSON.parse(text) : [];
+                setMenuItems(Array.isArray(data) ? data : []);
+                if (Array.isArray(data) && data.length === 0) {
+                    setMessage({
+                        type: "error",
+                        text: "No menu items returned for this supplier.",
+                    });
+                }
+            } catch (err) {
+                setMessage({
+                    type: "error",
+                    text: "Network or server error while fetching menu items: " + err.message,
+                });
+            } finally {
+                setIsLoadingItems(false);
+            }
+        };
+
+        // NEW: add item from menu into order lines
+        const addOrderLineFromMenuItem = (item) => {
+            const itemId = getItemId(item);
+            const price = getItemPrice(item);
+
+            if (!itemId) {
+                setMessage({
+                    type: "error",
+                    text: "Selected menu item is missing an ID.",
+                });
+                return;
+            }
+
+            setOrderLines((prev) => [
+                ...prev,
+                {
+                    item_id: String(itemId),
+                    price_snapshot: String(price),
+                    amount: "1",
+                },
+            ]);
         };
 
         const handleSubmit = async (e) => {
@@ -267,6 +264,119 @@
                     Internal tool for placing orders directly into the system.
                     <span className="badge">CS only</span>
                 </p>
+
+                {/* NEW: Supplier & menu section */}
+                <div className="section">
+                    <h3>Suppliers & Menu</h3>
+
+                    {/* Zipcode + fetch suppliers */}
+                    <div className="grid" style={{ marginBottom: "0.75rem" }}>
+                        <div>
+                            <label htmlFor="zipcode">Zipcode</label>
+                            <input
+                                id="zipcode"
+                                type="text"
+                                value={zipcode}
+                                onChange={(e) => setZipcode(e.target.value)}
+                                placeholder="e.g. 2100"
+                            />
+                        </div>
+                        <div style={{ display: "flex", alignItems: "flex-end" }}>
+                            <button
+                                type="button"
+                                className="btn btn-secondary"
+                                onClick={fetchSuppliers}
+                                disabled={isLoadingSuppliers}
+                            >
+                                {isLoadingSuppliers ? "Loading suppliers…" : "Find active suppliers"}
+                            </button>
+                        </div>
+                    </div>
+
+                    {/* Supplier dropdown */}
+                    {suppliers.length > 0 && (
+                        <div className="grid" style={{ marginBottom: "0.75rem" }}>
+                            <div>
+                                <label htmlFor="supplierSelect">Select supplier</label>
+                                <select
+                                    id="supplierSelect"
+                                    value={selectedSupplierId}
+                                    onChange={(e) => setSelectedSupplierId(e.target.value)}
+                                >
+                                    <option value="">-- choose --</option>
+                                    {suppliers.map((s) => (
+                                        <option key={s.supplierId} value={s.supplierId}>
+                                            {s.name} (#{s.supplierId})
+                                        </option>
+                                    ))}
+                                </select>
+                            </div>
+                            <div style={{ display: "flex", alignItems: "flex-end" }}>
+                                <button
+                                    type="button"
+                                    className="btn btn-secondary"
+                                    onClick={fetchMenuItems}
+                                    disabled={isLoadingItems || !selectedSupplierId}
+                                >
+                                    {isLoadingItems ? "Loading menu…" : "Load menu items"}
+                                </button>
+                            </div>
+                        </div>
+                    )}
+
+                    {/* Menu items list */}
+                    {menuItems.length > 0 && (
+                        <div style={{ marginTop: "0.5rem" }}>
+                            <label>Menu items for selected supplier</label>
+                            <div
+                                style={{
+                                    border: "1px solid #e5e7eb",
+                                    borderRadius: "8px",
+                                    padding: "0.5rem",
+                                    maxHeight: "200px",
+                                    overflowY: "auto",
+                                    fontSize: "0.9rem",
+                                }}
+                            >
+                                {menuItems.map((item) => {
+                                    const itemId = getItemId(item);
+                                    const name = getItemName(item);
+                                    const price = getItemPrice(item);
+
+                                    return (
+                                        <div
+                                            key={itemId}
+                                            style={{
+                                                display: "flex",
+                                                justifyContent: "space-between",
+                                                alignItems: "center",
+                                                padding: "0.25rem 0",
+                                                borderBottom: "1px solid #f3f4f6",
+                                            }}
+                                        >
+                                            <div>
+                                                <strong>{name}</strong>{" "}
+                                                <span style={{ color: "#6b7280" }}>
+                                                    (ID: {itemId})
+                                                </span>
+                                            </div>
+                                            <div style={{ display: "flex", alignItems: "center", gap: "0.75rem" }}>
+                                                <span>{price} kr</span>
+                                                <button
+                                                    type="button"
+                                                    className="btn btn-primary"
+                                                    onClick={() => addOrderLineFromMenuItem(item)}
+                                                >
+                                                    Add to order
+                                                </button>
+                                            </div>
+                                        </div>
+                                    );
+                                })}
+                            </div>
+                        </div>
+                    )}
+                </div>
 
                 <form onSubmit={handleSubmit}>
                     {/* Order info */}
@@ -433,5 +543,3 @@
     const root = ReactDOM.createRoot(rootEl);
     root.render(<OrderForm />);
 </script>
-</body>
-</html>
