--- a/services/customer-service/src/main/resources/public/cs-order.html
+++ b/services/customer-service/src/main/resources/public/cs-order.html
@@ -1,3 +1,142 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8" />
+    <title>MTOGO – Customer Service Order Tool</title>
+
+    <!-- React & ReactDOM (UMD builds) -->
+    <script
+            src="https://unpkg.com/react@18/umd/react.development.js"
+            crossorigin
+    ></script>
+    <script
+            src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
+            crossorigin
+    ></script>
+
+    <!-- Babel standalone, needed for type="text/babel" + JSX -->
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+
+    <style>
+        body {
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+            sans-serif;
+            margin: 0;
+            padding: 2rem;
+            background: #f7f7f8;
+        }
+        .page {
+            max-width: 900px;
+            margin: 0 auto;
+            background: #fff;
+            border-radius: 12px;
+            padding: 2rem;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.05);
+        }
+        h1 {
+            margin-top: 0;
+        }
+        .subtitle {
+            color: #555;
+            margin-bottom: 1.5rem;
+        }
+        .badge {
+            display: inline-block;
+            margin-left: 0.5rem;
+            padding: 0.15rem 0.5rem;
+            font-size: 0.75rem;
+            border-radius: 999px;
+            background: #eee;
+            text-transform: uppercase;
+            letter-spacing: 0.05em;
+        }
+        .section {
+            margin-bottom: 1.5rem;
+        }
+        .grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            gap: 1rem;
+        }
+        label {
+            display: block;
+            font-size: 0.85rem;
+            margin-bottom: 0.25rem;
+            color: #333;
+        }
+        input,
+        select {
+            width: 100%;
+            box-sizing: border-box;
+            padding: 0.5rem 0.6rem;
+            border-radius: 6px;
+            border: 1px solid #ccc;
+            font-size: 0.95rem;
+        }
+        .orderline-row {
+            display: grid;
+            grid-template-columns: 1.5fr 1.5fr 1fr auto;
+            gap: 0.75rem;
+            align-items: end;
+            margin-bottom: 0.75rem;
+        }
+        .btn {
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            padding: 0.45rem 0.9rem;
+            border-radius: 6px;
+            border: none;
+            font-size: 0.9rem;
+            cursor: pointer;
+        }
+        .btn-primary {
+            background: #2563eb;
+            color: white;
+        }
+        .btn-secondary {
+            background: #e5e7eb;
+            color: #111827;
+        }
+        .btn-danger {
+            background: #dc2626;
+            color: white;
+        }
+        .btn:disabled {
+            opacity: 0.6;
+            cursor: default;
+        }
+        .order-total {
+            margin-top: 0.75rem;
+            font-size: 1rem;
+        }
+        .actions {
+            display: flex;
+            gap: 0.75rem;
+            margin-top: 1rem;
+        }
+        .status-message {
+            margin-top: 1rem;
+            padding: 0.75rem 1rem;
+            border-radius: 8px;
+            font-size: 0.9rem;
+        }
+        .status-success {
+            background: #ecfdf3;
+            color: #166534;
+            border: 1px solid #bbf7d0;
+        }
+        .status-error {
+            background: #fef2f2;
+            color: #b91c1c;
+            border: 1px solid #fecaca;
+        }
+    </style>
+</head>
+
+<body>
+<div id="root"></div>
+
 <script type="text/babel">
     const { useState, useMemo } = React;
 
@@ -265,7 +404,7 @@
                     <span className="badge">CS only</span>
                 </p>
 
-                {/* NEW: Supplier & menu section */}
+                {/* NEW: Suppliers & Menu */}
                 <div className="section">
                     <h3>Suppliers & Menu</h3>
 
@@ -543,3 +682,5 @@
     const root = ReactDOM.createRoot(rootEl);
     root.render(<OrderForm />);
 </script>
+</body>
+</html>
