Fixed name of itemId when passing to redis

--- a/services/customer-service/src/main/resources/public/cs-order.html
+++ b/services/customer-service/src/main/resources/public/cs-order.html
@@ -334,8 +334,8 @@
             const cleanedLines = orderLines
                 .filter((l) => l.item_id && l.amount && l.price_snapshot)
                 .map((l) => ({
-                    itemId: Number(l.item_id),
-                    priceSnapshot: Number(l.price_snapshot),
+                    item_id: Number(l.item_id),
+                    price_snapshot: Number(l.price_snapshot),
                     amount: Number(l.amount),
                 }));
 
