added supplierid in legacy input

--- a/services/supplier-service/legacy-system/assets/index.html
+++ b/services/supplier-service/legacy-system/assets/index.html
@@ -41,6 +41,9 @@
       <h3>Total Price: <span id="total_price">0</span></h3>
       <label for="phone"
         >Customer Phone<input type="text" name="phone" id="phone"
+      /></label>      
+      <label for="phone"
+        >Supplier ID (debug)<input type="number" min="1" name="supplier" id="supplier"
       /></label>
       <button type="submit" onclick="submitOrder(event)">Submit</button>
       <div class="err"><span id="errmsg"></span></div>
