--- a/services/supplier-service/reports/jacoco/mtogo.supplier.DTO/LegacyOrderDetailsDTO.java.html
+++ b/services/supplier-service/reports/jacoco/mtogo.supplier.DTO/LegacyOrderDetailsDTO.java.html
@@ -4,76 +4,29 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.UUID;
 
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
+
+@Getter @Setter @NoArgsConstructor
 public class LegacyOrderDetailsDTO {
     private UUID orderId;
     private String customerPhone;
+    private int supplierId;
 
-<span class="nc" id="L11">    public enum orderStatus{</span>
-<span class="nc" id="L12">        created,</span>
-<span class="nc" id="L13">        rejected,</span>
-<span class="nc" id="L14">        accepted,</span>
-<span class="nc" id="L15">        waiting,</span>
-<span class="nc" id="L16">        delivering,</span>
-<span class="nc" id="L17">        delivered</span>
-    }
-    private orderStatus status;
-    private List&lt;OrderLineDTO&gt; orderLineDTOS;
-
-<span class="nc" id="L22">    public LegacyOrderDetailsDTO() {</span>
-<span class="nc" id="L23">        orderLineDTOS = new ArrayList&lt;&gt;();</span>
-<span class="nc" id="L24">    }</span>
-
-<span class="nc" id="L26">    public LegacyOrderDetailsDTO(String customerPhone, orderStatus status, List&lt;OrderLineDTO&gt; orderLineDTOS) {</span>
-<span class="nc" id="L27">        this.customerPhone = customerPhone;</span>
-<span class="nc" id="L28">        this.status = status;</span>
-<span class="nc" id="L29">        this.orderLineDTOS = orderLineDTOS;</span>
-<span class="nc" id="L30">    }</span>
-
-<span class="nc" id="L32">    public LegacyOrderDetailsDTO(UUID orderId, String customerPhone, orderStatus status, List&lt;OrderLineDTO&gt; orderLineDTOS) {</span>
-<span class="nc" id="L33">        this.orderId = orderId;</span>
-<span class="nc" id="L34">        this.customerPhone = customerPhone;</span>
-<span class="nc" id="L35">        this.status = status;</span>
-<span class="nc" id="L36">        this.orderLineDTOS = orderLineDTOS;</span>
-<span class="nc" id="L37">    }</span>
-    public void setOrderLines(List&lt;OrderLineDTO&gt; orderLines) {
-<span class="nc bnc" id="L39" title="All 2 branches missed.">        this.orderLineDTOS = (orderLines != null) ? orderLines : new ArrayList&lt;&gt;();</span>
-<span class="nc" id="L40">    }</span>
-
-    public List&lt;OrderLineDTO&gt; getOrderLines() {
-<span class="nc" id="L43">        return orderLineDTOS;</span>
-    }
-
-    public orderStatus getStatus() {
-<span class="nc" id="L47">        return status;</span>
-    }
-
-    public String getCustomerId() {
-<span class="nc" id="L51">        return customerPhone;</span>
-    }
-
-    public UUID getOrderId() {
-<span class="nc" id="L55">        return orderId;</span>
-    }
-
-    public List&lt;OrderLineDTO&gt; getOrderLineDTOS() {
-<span class="nc" id="L59">        return orderLineDTOS;</span>
-    }
-
-    public void setOrderId(UUID orderId) {
-<span class="nc" id="L63">        this.orderId = orderId;</span>
-<span class="nc" id="L64">    }</span>
-
-    public void setCustomerId(String customerPhone) {
-<span class="nc" id="L67">        this.customerPhone = customerPhone;</span>
-<span class="nc" id="L68">    }</span>
-
-    public void setStatus(orderStatus status) {
-<span class="nc" id="L71">        this.status = status;</span>
-<span class="nc" id="L72">    }</span>
-
-    public void setOrderLineDTOS(List&lt;OrderLineDTO&gt; orderLineDTOS) {
-<span class="nc" id="L75">        this.orderLineDTOS = orderLineDTOS;</span>
-<span class="nc" id="L76">    }</span>
-
+<span class="fc" id="L17">    private List&lt;OrderLineDTO&gt; orderLineDTOS = new ArrayList&lt;&gt;();</span>
+    
+<span class="fc" id="L19">    public LegacyOrderDetailsDTO(UUID orderId, String customerPhone, int supplierId, List&lt;OrderLineDTO&gt; orderLineDTOS) {</span>
+<span class="fc" id="L20">        this.orderId = orderId;</span>
+<span class="fc" id="L21">        this.customerPhone = customerPhone;</span>
+<span class="fc" id="L22">        this.supplierId = supplierId;</span>
+<span class="fc" id="L23">        this.orderLineDTOS = orderLineDTOS;</span>
+<span class="fc" id="L24">    }    </span>
+    
+<span class="fc" id="L26">    public LegacyOrderDetailsDTO(UUID orderId, String customerPhone, List&lt;OrderLineDTO&gt; orderLineDTOS) {</span>
+<span class="fc" id="L27">        this.orderId = orderId;</span>
+<span class="fc" id="L28">        this.customerPhone = customerPhone;</span>
+<span class="fc" id="L29">        this.orderLineDTOS = orderLineDTOS;</span>
+<span class="fc" id="L30">    }</span>
 }
 </pre><div class="footer"><span class="right">Created with <a href="http://www.jacoco.org/jacoco">JaCoCo</a> 0.8.14.202510111229</span></div></body></html>
