--- a/services/supplier-service/reports/jacoco/mtogo.supplier.server/Main.java.html
+++ b/services/supplier-service/reports/jacoco/mtogo.supplier.server/Main.java.html
@@ -10,7 +10,7 @@ import org.slf4j.LoggerFactory;
 <span class="nc" id="L10">    private static final Logger log = LoggerFactory.getLogger(Main.class);</span>
     public static void main(String[] args) {
         try {
-            // Arbitrary commentddd
+<span class="nc" id="L13">            JavalinBuilder.startServer(7070);</span>
 <span class="nc" id="L14">            LegacyDBAdapter.getAdapter().startListener(1984);</span>
             
 <span class="nc" id="L16">        } catch (IOException ex) {</span>
