--- a/services/supplier-service/reports/jacoco/mtogo.supplier.factory/OrderDTOFactory.java.html
+++ b/services/supplier-service/reports/jacoco/mtogo.supplier.factory/OrderDTOFactory.java.html
@@ -9,7 +9,7 @@ import java.util.UUID;
 import java.util.stream.Collectors;
 
 import mtogo.supplier.DTO.LegacyOrder;
-import mtogo.supplier.DTO.OrderDetailsDTO;
+import mtogo.supplier.DTO.LegacyOrderDetailsDTO;
 import mtogo.supplier.DTO.OrderLineDTO;
 
 /**
@@ -18,24 +18,23 @@ import mtogo.supplier.DTO.OrderLineDTO;
  */
 <span class="nc" id="L19">public class OrderDTOFactory {</span>
 
-    public static OrderDetailsDTO createFromLegacy(LegacyOrder legacy) throws IllegalArgumentException {
+    public static LegacyOrderDetailsDTO createFromLegacy(LegacyOrder legacy) throws IllegalArgumentException {
 
 <span class="pc bpc" id="L23" title="1 of 2 branches missed.">        if (legacy == null) {</span>
 <span class="nc" id="L24">            throw new IllegalArgumentException(&quot;Passed object was null&quot;);</span>
         }
 
         try {
-             // FIXME: Risk of collisions!
-<span class="fc" id="L29">            UUID id = UUID.randomUUID();</span>
+<span class="fc" id="L28">            UUID id = UUID.randomUUID();</span>
 
-<span class="fc" id="L31">            List&lt;OrderLineDTO&gt; lines = legacy.getOrderlines().stream().map((line) -&gt; {</span>
-<span class="fc" id="L32">                return new OrderLineDTO(id, line.getItemId(), line.getUnitPrice(), line.getAmount());</span>
-<span class="fc" id="L33">            }).collect(Collectors.toList());</span>
+<span class="fc" id="L30">            List&lt;OrderLineDTO&gt; lines = legacy.getOrderlines().stream().map((line) -&gt; {</span>
+<span class="fc" id="L31">                return new OrderLineDTO(id, line.getItemId(), line.getUnitPrice(), line.getAmount());</span>
+<span class="fc" id="L32">            }).collect(Collectors.toList());</span>
 
-<span class="fc" id="L35">            return new OrderDetailsDTO(id, legacy.getPhone(), OrderDetailsDTO.orderStatus.created, lines);</span>
+<span class="fc" id="L34">            return new LegacyOrderDetailsDTO(id, legacy.getPhone(), legacy.getSupplier(), lines);</span>
 
-<span class="fc" id="L37">        } catch (Exception e) {</span>
-<span class="fc" id="L38">            throw new IllegalArgumentException(e);</span>
+<span class="fc" id="L36">        } catch (Exception e) {</span>
+<span class="fc" id="L37">            throw new IllegalArgumentException(e);</span>
         }
     }
 }
